# aloe-air192

./: .gitignore  acccfg.cpp  admin.cpp  autogen.sh  config.h.in  configure.ac  distclean.sh  ethcfg.cpp  info.md  ledban.cpp  misc.c  misc_air192.cpp  mod_gpio.cpp  mod_nm.cpp  mod_template1.cpp  nl.cpp  priv.h  spkcal.cpp  test1.cpp  testi2c1.cpp  wificfg.cpp
admin/: Makefile.am  WPACtrl.c  app_msg_queue.c  doxygen.doxyfile  ev.c  fwupd.cpp  misc.c  misc_fdkaac.cpp  misc_ffmpeg.cpp  mod_cli.cpp  test1.cpp  testftrim.cpp  testnl1.cpp  testssid1.cpp  unitest.c  wifi_manager.c
admin/include/admin/: WPACtrl.h  admin.h  air192.h  nl.h  sa7715.h  wifi_manager.h
admin/test/: admin2.html  aplist.txt  lighttpd.conf  package.json  run-lighttpd.sh
include/admin/: admin.h  app_msg_define.h  app_msg_queue.h  ev.h  unitest.h
test/: admin_observer1.cgi  webpack.config.js
test/src/: admin.js  fwupd.js  spkcal.js
